force-app/main/default/objects/EYI_Case_SLA__mdt/EYI_Case_SLA__mdt.object-meta.xml
<CustomObject>
    <label>Case SLA</label>
    <pluralLabel>Case SLA</pluralLabel>
</CustomObject>