force-app/main/default/objects/EYI_Case_SLA__mdt/fields/EYI_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sub_Category__c</fullName>
    <label>Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amenities Details</fullName>
                <default>true</default>
                <label>Amenities Details</label>
            </value>
            <value>
                <fullName>Amenities Usage and Issues</fullName>
            </value>
            <value>
                <fullName>Apartment Specification</fullName>
            </value>
            <value>
                <fullName>Apartment Visit - Inspection Request</fullName>
            </value>
            <value>
                <fullName>Applicant Address Update</fullName>
            </value>
            <value>
                <fullName>Applicant Email Update</fullName>
            </value>
            <value>
                <fullName>Applicant Mobile Number Update</fullName>
            </value>
            <value>
                <fullName>Applicant Name Update</fullName>
            </value>
            <value>
                <fullName>Applicants Swap</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Branding At Office</fullName>
            </value>
            <value>
                <fullName>Brokerage Information</fullName>
            </value>
            <value>
                <fullName>Building Infrastructure Complaints</fullName>
            </value>
            <value>
                <fullName>Building Infrastructure Queries</fullName>
            </value>
            <value>
                <fullName>Change Floor/Unit no</fullName>
            </value>
            <value>
                <fullName>Change of Ownership (Resale, Gift Deed)</fullName>
            </value>
            <value>
                <fullName>Change of Ownership( Resale before possession)</fullName>
            </value>
            <value>
                <fullName>Clarification on Agreement Terms</fullName>
            </value>
            <value>
                <fullName>Client Event</fullName>
            </value>
            <value>
                <fullName>Client Experience</fullName>
            </value>
            <value>
                <fullName>Client Pick-up Request</fullName>
            </value>
            <value>
                <fullName>Commission Delay</fullName>
            </value>
            <value>
                <fullName>Commission Dispute</fullName>
            </value>
            <value>
                <fullName>Community and Association Communication</fullName>
            </value>
            <value>
                <fullName>Construction or Quality Complaints</fullName>
            </value>
            <value>
                <fullName>Conveyance &amp; Handover</fullName>
            </value>
            <value>
                <fullName>Customer Service and Support Complaints</fullName>
            </value>
            <value>
                <fullName>Customer Support and Assistance</fullName>
            </value>
            <value>
                <fullName>Customization</fullName>
            </value>
            <value>
                <fullName>Customization or Modification Requests</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>