force-app/main/default/objects/EYI_Case_SLA__mdt/fields/TAT_L1__c.field-meta.xml
<CustomField>
    <fullName>TAT_L1__c</fullName>
    <label>TAT L1</label>
    <length>4</length>
    <type>Text</type>
</CustomField>