force-app/main/default/objects/EYI_Case_SLA__mdt/fields/TAT_L2__c.field-meta.xml
<CustomField>
    <fullName>TAT_L2__c</fullName>
    <label>TAT L2</label>
    <length>4</length>
    <type>Text</type>
</CustomField>