force-app/main/default/objects/EYI_Case_SLA__mdt/fields/TAT_L3__c.field-meta.xml
<CustomField>
    <fullName>TAT_L3__c</fullName>
    <label>TAT L3</label>
    <length>4</length>
    <type>Text</type>
</CustomField>